# signetai-android

./: .gitignore  README.md  daemon-rs  package.json
.github/workflows/: android.yml  rust.yml
dashboard/: package.json
scripts/: build-android.sh  copy-dashboard.sh  stage-daemon.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/frontend-stub/: index.html
src-tauri/src/: commands.rs  daemon.rs  lib.rs  main.rs
src-tauri/src/platform/: android.rs  linux.rs  macos.rs  mod.rs  windows.rs
